--- a/zxing/src/main/res/values/strings.xml
+++ b/zxing/src/main/res/values/strings.xml
@@ -14,8 +14,8 @@
  limitations under the License.
  -->
 <resources>
-    <string name="app_name">条码扫描器</string>
+    <string name="app_name">二维码扫描器</string>
     <string name="button_ok">确定</string>
     <string name="msg_camera_framework_bug">很遗憾，Android 相机出现问题。你可能需要重启设备。</string>
-    <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
+    <string name="msg_default_status">请将二维码置于取景框内扫描。  </string>
 </resources>
